[package]
name = "cosmic-dark-light"
version = "0.1.0"
edition = "2021"
authors = ["Ashley Wulber <ashley@system76.com>"]
description = "A command line tool to switch between dark and light mode on Pop!_OS"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
cosmic-theme = { git = "https://github.com/pop-os/libcosmic" }
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }